testdata/invalid/invalid_map_no_comma.bop
struct Wrong {
    map[string] il;
}